2007-06-21  James Youngman  <jay@gnu.org>

	* sccsfile.cc (print_subsituted_flags_list): Return true if
	nothing failed (as opposed to falling off the end of the
	function).   This prevents spurious x-file write errors if the y
	flag is unset.

	* cssc.h: Require exception support to compile.  This is not
	strictly necessary for successful operation, but without exception
	support "get s.foo s.bar" will not process s.bar if we failed on
	s.foo.  So exception support is required for full SCCS
	compatibility.

2007-06-20  James Youngman  <jay@gnu.org>

	* bsd/sccs.c (unedit): Fix "sccs unedit /tmp/SCCS/s.foo will
	cause ./s.foo to be unlinked" bug, by forming the g-file name
	from the p-file name, as opposed to the name of the file on the
	command line (because the file named on the command line gould be
	either the g-file or the s-file).
	* docs/BUGS: Mention the bugfix.
	* tests/bsd-sccs/delsfile.sh: New test, for this bug.

	* .gitignore: Ignore Emacs editor backups.

	* cap.cc, val.cc: Add explicit template instantiation directives to
	support compilation with GCC's -fno-implicit-templates option.
	* dtbl-prepend.cc, fileiter.cc, sccs-delta.cc: ditto
	* sccsfile.cc: Ditto.  Also include "mylist.h" to get the method
	definitions for the templates.

	* .gitignore, docs/.gitignore, testutils/.gitignore: New files.

	* tests/common/test-common: Work around an apparent bug in Bash
	3.1.17(1) in which "$@$ac_c" expands to DEL${ac_c} when $1 is "".
	That broke echo_nonl, causing some tests to fail.

2007-06-19  James Youngman  <jay@gnu.org>

	* unused/configs/cf-bcc.h, unused/configs/cf-djgpp.h,
	unused/configs/cf-redhat.h, unused/configs/cf-sls.h,
	unused/configs/cf-xenix.h, unused/configs/mf-msdos.mak,
	unused/configs/mf-unix.mak, unused/Makefile.am, unused/README,
	unused/_chmod.cc, unused/configs/README, unused/dosfile.cc,
	unused/dummy.cc, unused/ffsync.cc, unused/fsync.cc,
	unused/linux.diffs, unused/move-if-change, unused/pipe.cc,