@@ -3,3 +3,4 @@ stamp-h.in
 config.h.in
 Makefile.in
 configure
+autom4te.cache
